--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-/.idea
+.idea
 yarn.lock
-# testing
-/coverage
-/.idea
-yarn.lock
-
-# production
-/build
-/.idea
-yarn.lock
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-/.idea
-yarn.lock
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-/.idea
-yarn.lock
+node_modules
+package-lock.json
